# bzoel.github.io

./: 404.html  CNAME  README.md  feed_rss_created.xml  feed_rss_updated.xml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml
about/: index.html
callmanager-find-replace/: index.html
cards-on-webex/: index.html
cat-on-meraki-getting-started/: index.html
cisco-sdwan-upgrade/: index.html
docs/: .authors.yml  about.md  index.md
docs/about/: DevNet500_01.eps  Devnet certifications_professional_RGB.eps  ccnp_enterprise_color.eps  ccnp_security_color.eps  index.md
docs/posts/: cisco-sdwan-upgrade.md  letsencrypt-vmware-view.md  meraki-typer.md
docs/posts/callmanager-find-replace/: index.md
docs/posts/cards-on-webex/: index.md
docs/posts/cat-on-meraki-getting-started/: index.md
docs/posts/cisco-sdwan-upgrade/: index.md
docs/posts/meraki-typer/: index.md
docs/studies/ccie-ei/: bgp.md  dmvpn.md  eigrp.md  index.md  mpls.md  multicast.md  ospf.md  sdaccess.md
docs/studies/ccnp-route/: 1-network-prin.md  4-vpn-tech.md  5-infra-security.md  eigrp.md  vrf-lite.md
docs/studies/ensdwi/: 1-architecture.md  2-controller-deployment.md  3-router-deployment.md  4-policies.md  5-security-qos.md  6-management-operations.md
docs/stylesheets/: extra.css
includes/: abbreviations.md
letsencrypt-vmware-view/: index.html
meraki-typer/: index.html
overrides/: blog-post.html
search/: search_index.json
studies/ccie-ei/: index.html
studies/ccie-ei/bgp/: index.html
studies/ccie-ei/dmvpn/: index.html
(+17 files in other folders)
