[tool.poetry]
name = "bzwebsite"
version = "0.1.0"
description = "MKDocs-based blog for bzoel.io"
authors = ["Billy Zoellers <billy.zoellers@mac.com>"]

[tool.poetry.dependencies]
python = "^3.9"
mkdocs-material = {git = "ssh://git@github.com/squidfunk/mkdocs-material-insiders.git"}
mkdocs-git-revision-date-localized-plugin = "^1.1.0"
mkdocs-git-committers-plugin-2 = "^2.2.2"
mkdocs-glightbox = "^0.3.1"
mkdocs-rss-plugin = "^1.5.0"
pillow = "^10.0.0"
cairosvg = "^2.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
